# smooth-closest-point

./: .gitignore  CMakeLists.txt  README.md  WA_check.m  WA_forward.m  WA_interactive.m  WA_inverse.m  WA_precompute.m  WA_starthere.m  computeAndSaveEmbedding.m  computeAndSaveOffsetSurfaces.m  computeKeypoints.m  embedMeshAndSpace.m  generateCurveOnMesh.m  getCartesianFromBarycentric.m  getPointsInsideCavities.m  readMesh.m  readme.md  readme.txt  sampleControlPoints.m  splineOnSurface.m  writeMesh.m
data/: gargo.off
decimator/: README.txt  decimator.cc  decimator.m  temp.off
matlab/: README.md  lsmesheshard.m  pickQuad.m
phong_cs/: phong_cs.sln
phong_cs/Phong/: Phong.vcxproj  Phong.vcxproj.filters
phong_cs/phong_cs/: main.cpp  phong_cs.vcxproj  phong_cs.vcxproj.filters
phong_cs/phong_cs_dll/: phong_cs_dll.vcxproj  phong_cs_dll.vcxproj.filters
phong_cs/phong_csharp/: PhongProjection.cs  phong_csharp.csproj
src/: README.md  main.cpp
src/core/: Embedding.h  Mesh.h  PointOnSurface.h  WeightedAveragePhong.cpp  WeightedAveragePhong.h  lscoord.h  types.h
src/phong/: Phong.cpp  Phong.h  TrianglePhong.cpp  TrianglePhong.exp  TrianglePhong.h  TrianglePhong.lib
src/utils/: aligned_matrix.h  null.h
